fix: main 화면에서 overflow 문제 수정

--- a/Front/musicnote/src/styles/Global.css
+++ b/Front/musicnote/src/styles/Global.css
@@ -86,7 +86,7 @@
 
 body {
   width: 100vw;
-  height: 100vh;
+  height: var(--app-height);
   background-color: #19171b;
 }
 
